tdf#73073 GSoC Rollback after DDL commit error

If a DDL statement is executed without error, but the commit after
that fails, then roll back the commit.

Change-Id: Ibf8d415081a43b03c7182e93f1d3a127dbb03267